# deploy_service

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy_service.service  log  requirements.txt  setup.cfg  setup.py  test_request.json
app/app/: main.py
deploy_service/: app.py  request_shema.py  request_validation.py
