[metadata]
name = docker-auto-deploy-vkutas
version = 0.0.1
author = Vladislav Kutas
author_email = kutas.uladzislau@gmail.com
description = A simple service to automatically update running docker containers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkutas/deploy_service
project_urls =
    Bug Tracker = https://github.com/vkutas/deploy_service/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = deploy_service
packages = find:
python_requires = >=3.8

[options.packages.find]
where = deploy_service